--- a/package.json
+++ b/package.json
@@ -1,56 +1,65 @@
 {
-	"name": "globals",
-	"version": "13.24.0",
-	"description": "Global identifiers from different JavaScript environments",
-	"license": "MIT",
-	"repository": "sindresorhus/globals",
-	"funding": "https://github.com/sponsors/sindresorhus",
-	"author": {
-		"name": "Sindre Sorhus",
-		"email": "sindresorhus@gmail.com",
-		"url": "https://sindresorhus.com"
-	},
-	"sideEffects": false,
-	"engines": {
-		"node": ">=8"
-	},
-	"scripts": {
-		"test": "xo && ava"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts",
-		"globals.json"
-	],
-	"keywords": [
-		"globals",
-		"global",
-		"identifiers",
-		"variables",
-		"vars",
-		"jshint",
-		"eslint",
-		"environments"
-	],
-	"dependencies": {
-		"type-fest": "^0.20.2"
-	},
-	"devDependencies": {
-		"ava": "^2.4.0",
-		"tsd": "^0.14.0",
-		"xo": "^0.36.1"
-	},
-	"xo": {
-		"ignores": [
-			"get-browser-globals.js"
-		],
-		"rules": {
-			"node/no-unsupported-features/es-syntax": "off"
-		}
-	},
-	"tsd": {
-		"compilerOptions": {
-			"resolveJsonModule": true
-		}
-	}
+  "name": "@humanwhocodes/module-importer",
+  "version": "1.0.1",
+  "description": "Universal module importer for Node.js",
+  "main": "src/module-importer.cjs",
+  "module": "src/module-importer.js",
+  "type": "module",
+  "types": "dist/module-importer.d.ts",
+  "exports": {
+    "require": "./src/module-importer.cjs",
+    "import": "./src/module-importer.js"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/nzakas"
+  },
+  "scripts": {
+    "build": "rollup -c && tsc",
+    "prepare": "npm run build",
+    "lint": "eslint src/ tests/",
+    "test:unit": "c8 mocha tests/module-importer.test.js",
+    "test:build": "node tests/pkg.test.cjs && node tests/pkg.test.mjs",
+    "test": "npm run test:unit && npm run test:build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/humanwhocodes/module-importer.git"
+  },
+  "keywords": [
+    "modules",
+    "esm",
+    "commonjs"
+  ],
+  "engines": {
+    "node": ">=12.22"
+  },
+  "author": "Nicholas C. Zaks",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@types/node": "^18.7.6",
+    "c8": "7.12.0",
+    "chai": "4.3.6",
+    "eslint": "8.22.0",
+    "lint-staged": "13.0.3",
+    "mocha": "9.2.2",
+    "rollup": "2.78.0",
+    "typescript": "4.7.4",
+    "yorkie": "2.0.0"
+  }
 }
